[package]
name = "klauthed-security"
version = "1.0.0-rc.2"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Security primitives for klauthed: JWT, sessions, authorization, AEAD, MFA/TOTP, password and key derivation, API keys."
readme = "README.md"
keywords = ["jwt", "authentication", "authorization", "cryptography", "klauthed"]
categories = ["authentication", "cryptography"]

[dependencies]
klauthed-error.workspace = true
klauthed-macros.workspace = true
klauthed-core.workspace = true

serde = { workspace = true }
serde_json.workspace = true
base64.workspace = true
hex.workspace = true
ring.workspace = true
zeroize.workspace = true
secrecy.workspace = true
thiserror.workspace = true

# Argon2id password hashing. `std` pulls password-hash/std -> rand_core/std,
# which makes `password_hash::rand_core::OsRng` (the OS CSPRNG) available for
# salt generation.
argon2 = { workspace = true, features = ["std"] }

# Constant-time equality for secret/MAC comparison.
subtle = "2.6"

# JWT. Not in the workspace; pinned to the vetted standard implementation.
# `>=10.3` fixes the algorithm-confusion advisory GHSA-h395-gr6q-cpjc. v10 drops
# `ring` and requires an explicit crypto backend: `aws_lc_rs` (chosen) keeps the
# tree advisory-clean, whereas `rust_crypto` pulls `rsa` (RUSTSEC-2023-0071) and
# omits the PEM key constructors this crate exposes. `use_pem` stays on (default).
jsonwebtoken = { version = "10.3", features = ["aws_lc_rs"] }

# Async session-store trait (object-safe async methods).
async-trait = { workspace = true }

# TOTP (RFC 6238). `otpauth` enables the provisioning URI + issuer/account
# fields; `gen_secret` enables CSPRNG secret generation.
totp-rs = { version = "5.7", default-features = false, features = ["otpauth", "gen_secret"] }

# Have I Been Pwned breach check — optional (`hibp` feature). `reqwest` (rustls)
# calls the k-anonymity range API; `sha1` hashes the password locally so only a
# 5-char prefix is ever sent.
reqwest = { workspace = true, optional = true }
sha1 = { version = "0.10", optional = true }

# X25519 for sealed-box (public-key) encryption — optional (`sealed` feature).
x25519-dalek = { workspace = true, optional = true }

# PASETO v4 tokens — optional (`paseto` feature). Audited, versioned-protocol
# design (no algorithm-confusion class of bug); v4.public is Ed25519.
pasetors = { workspace = true, optional = true }

# WebAuthn / passkeys — optional (`webauthn` feature). The de-facto standard
# server-side implementation; MPL-2.0 (allow-listed in deny.toml) and links
# OpenSSL, so it is gated off by default. `danger-allow-state-serialisation`
# lets the registration/authentication ceremony state be persisted between the
# two HTTP round-trips.
webauthn-rs = { version = "0.5.5", features = [
    "danger-allow-state-serialisation",
], optional = true }

[features]
default = []
# Sealed-box (recipient public-key) encryption in `aead::asymmetric`.
sealed = ["dep:x25519-dalek"]
# WebAuthn / passkey registration + authentication ceremonies (`passkey` module).
webauthn = ["dep:webauthn-rs"]
# Have I Been Pwned "Pwned Passwords" k-anonymity breach check (`password::hibp`).
hibp = ["dep:reqwest", "dep:sha1"]
# PASETO v4 tokens (`paseto` module) — v4.public (Ed25519) sign/verify.
paseto = ["dep:pasetors"]

[dev-dependencies]
tokio = { workspace = true }
# Property tests for JWT claims round-tripping.
proptest = { workspace = true }
webauthn-authenticator-rs = { version = "0.5.5", default-features = false, features = ["softpasskey"] }
# HTTP mock for the HIBP client tests (no live API needed).
wiremock = "0.6"
# Micro-benchmarks for the JWT and AEAD crypto hot paths.
criterion = { workspace = true }

[[bench]]
name = "crypto"
harness = false

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
