[package]
name = "klauthed-testing"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
klauthed-core.workspace = true
klauthed-error.workspace = true
klauthed-macros.workspace = true

async-trait.workspace = true
thiserror.workspace = true
uuid.workspace = true

[dev-dependencies]
tokio = { workspace = true }
