[package]
name = "klauthed-testing"
version = "1.1.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Test utilities for klauthed services, used as a dev-dependency."
readme = "README.md"
keywords = ["testing", "test-utils", "klauthed"]
categories = ["development-tools::testing"]

[dependencies]
klauthed-core.workspace = true
klauthed-error.workspace = true
klauthed-macros.workspace = true

async-trait.workspace = true
thiserror.workspace = true
uuid.workspace = true

[dev-dependencies]
tokio = { workspace = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
