[package]
name = "klauthed-web"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[features]
# Install the per-request RequestContext as the ambient context (core's
# `task-local`) for the duration of each request's handler future.
context-scope = ["klauthed-core/task-local"]

# Enable SqlHealthCheck and the sql-backed rate-limit check. Activates the
# `sql` feature on klauthed-data (AnyPool driver-agnostic pool).
data-sql   = ["dep:sqlx", "klauthed-data/sql"]

# Enable RedisHealthCheck, RedisRateLimitStore, and RedisRateLimit. Activates
# the `redis` feature on klauthed-data.
data-redis = ["dep:redis", "klauthed-data/redis"]

[dependencies]
klauthed-error.workspace = true
klauthed-core.workspace = true
klauthed-data.workspace = true
klauthed-security.workspace = true
klauthed-platform.workspace = true
klauthed-protocol.workspace = true

actix-web.workspace = true
actix-cors.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
async-trait.workspace = true
futures-util.workspace = true

# Optional — pulled in only when the corresponding feature is enabled.
sqlx  = { workspace = true, optional = true }
redis = { workspace = true, optional = true }

[dev-dependencies]
serde_json.workspace = true
base64.workspace = true
ring.workspace = true
