[package]
name = "klauthed-web"
version = "0.6.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "actix-web HTTP layer for klauthed: extractors, middleware, uniform error rendering, and OAuth2/OIDC endpoints."
readme = "README.md"
keywords = ["actix-web", "oauth2", "middleware", "http", "klauthed"]
categories = ["web-programming::http-server"]

[features]
# Install the per-request RequestContext as the ambient context (core's
# `task-local`) for the duration of each request's handler future.
context-scope = ["klauthed-core/task-local"]

# Enable SqlHealthCheck and the sql-backed rate-limit check. Activates the
# `sql` feature on klauthed-data (AnyPool driver-agnostic pool).
data-sql   = ["dep:sqlx", "klauthed-data/sql"]

# Enable RedisHealthCheck, RedisRateLimitStore, and RedisRateLimit. Activates
# the `redis` feature on klauthed-data.
data-redis = ["dep:redis", "klauthed-data/redis"]

# Run this service *as* a config server: serve configuration to other services
# over HTTP (the `config_server` module). No extra dependencies.
config-server = []

# OpenTelemetry request-tracing middleware (RequestTracing): per-request spans +
# W3C trace-context propagation, exported via klauthed-observability's pipeline.
otel = [
    "dep:klauthed-observability",
    "klauthed-observability/otel",
    "dep:opentelemetry",
    "dep:tracing-opentelemetry",
]

# Generate an OpenAPI 3.1 spec (utoipa) for the built-in endpoints and serve it
# as JSON; services merge their own annotated paths into the document.
openapi = ["dep:utoipa"]

# Serve an interactive Swagger UI (assets vendored into the binary) alongside the
# generated spec. Implies `openapi`.
swagger-ui = ["openapi", "dep:utoipa-swagger-ui"]

# Expose POST /refresh to drive a klauthed-core RefreshTrigger (push config
# reload — the Spring `/actuator/refresh` analog). No extra direct deps.
config-refresh = ["klauthed-core/hot-reload"]

# WebAuthn / passkey HTTP endpoints (the `passkey` module) over the
# klauthed-security ceremony SPI. Pulls klauthed-security/webauthn (OpenSSL).
webauthn = ["klauthed-security/webauthn"]

[dependencies]
klauthed-error.workspace = true
klauthed-core.workspace = true
klauthed-data.workspace = true
klauthed-security.workspace = true
klauthed-platform.workspace = true
klauthed-protocol.workspace = true

actix-web.workspace = true
actix-cors.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
async-trait.workspace = true
futures-util.workspace = true

# Optional — pulled in only when the corresponding feature is enabled.
sqlx  = { workspace = true, optional = true }
redis = { workspace = true, optional = true }
# OpenTelemetry request tracing (`otel` feature).
klauthed-observability = { workspace = true, optional = true }
opentelemetry          = { workspace = true, optional = true }
tracing-opentelemetry  = { workspace = true, optional = true }
# OpenAPI spec generation (`openapi` feature) + bundled Swagger UI (`swagger-ui`).
utoipa                 = { workspace = true, optional = true }
utoipa-swagger-ui      = { workspace = true, optional = true }

[dev-dependencies]
serde_json.workspace = true
base64.workspace = true
ring.workspace = true
# Adds the SQLite driver in test builds so WebStarter/Components can be exercised
# against an in-memory pool without a live database.
sqlx = { workspace = true, features = ["sqlite"] }
# In-process software authenticator to drive the passkey ceremony end-to-end in
# tests (no browser); matches klauthed-security's passkey test dep.
webauthn-authenticator-rs = { version = "0.5.5", default-features = false, features = ["softpasskey"] }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
