[package]
name = "reference-service"
version = "0.5.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "A reference klauthed service wiring config + observability + web + JWT auth end to end (not published)."
publish = false

[dependencies]
klauthed-core.workspace = true
klauthed-web.workspace = true
klauthed-security.workspace = true
klauthed-observability.workspace = true

actix-web.workspace = true
tokio = { workspace = true }
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
